--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner: SAFE AF Engineering # or company name
 first_published: 2018  # if migrating another site, the year of your first publish
 email: info@safe-af.engineering
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "safe-af.engineering" # the base hostname & protocol for your site
+url: "mpescimoro.github.io" # the base hostname & protocol for your site
 social:
   twitter: https://twitter.com/
   github: https://github.com/
